--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
         <a href="/">Home</a>
         <a href="/users/all_users">View All Users</a>
         <a href="/users/new">Add a User</a>
+        <a href="/posts/all_posts">All Posts</a>
     </nav>
     <main id="content">
         {% with messages = get_flashed_messages(with_categories=true) %}
