--- a/templates/users/all_users.html
+++ b/templates/users/all_users.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block title %}All Users {% endblock %}
 {% block content %}
-<div class="container-fluid">
+<div class="container">
     <h1>All Users</h1>
     <ul>
         {% for user in users %}
-        <li><a href="/users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></li>
+        <li><a href="/users/{{user.id}}">{{user.full_name}}</a></li>
         {% endfor %}
     </ul>
     <form action="/users/new">
