--- a/templates/users/edit_user.html
+++ b/templates/users/edit_user.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}{{user.first_name}} {{user.last_name}} {% endblock %}
+{% block title %}{{user.full_name}} {% endblock %}
 {% block content %}
-    <div class="container-fluid">
-        <h1>Edit {{user.first_name}} {{user.last_name}}</h1>
+    <div class="container">
+        <h1>Edit {{user.full_name}}</h1>
         <form method="POST">
             <div class="form-group row">
                 <label for="first_name" class="col-sm-2">First Name:</label>
