--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}{{user.first_name}} {{user.last_name}} {% endblock %}
+{% block title %}{{user.full_name}} {% endblock %}
 {% block content %}
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         {% if user.image_url %}
         <div class="col-sm-2">
@@ -10,11 +10,21 @@
         {% endif %}
         
         <div class="col-sm-10">
-            <h2>{{user.first_name}} {{user.last_name}}</h2>
+            <h1>{{user.full_name}}</h1>
             <a href="/users/{{user.id}}/edit_user"> <button id="edit">Edit</button></a>
             <a href="/users/{{user.id}}/delete"> <button id="delete">Delete</button></a>
         </div>
+        <div class="col-sm-10">
+            <h2>Posts</h2>
+            <ul>
+                {% for post in user.posts %}
+                <li><a href="/posts/show_post/{{post.id}}">{{post.title}}</a></li>
+                {% endfor %}
+            </ul>
+            <form action="/users/{{user.id}}/new_post">
+                <button>Create New Post</button>
+            </form>
+        </div>
     </div>
-
 </div>
 {% endblock %}
