--- a/static/app.css
+++ b/static/app.css
@@ -3,6 +3,9 @@ body {
     margin: 0;
 }
 
+.post-title{
+    padding-top: 20px;
+}
 #content {
     margin: 40px;
 }
@@ -41,4 +44,8 @@ body {
 
 .messages .error {
     background-color: rgba(255, 0, 0, 0.1)
+}
+
+.btn{
+    margin: 2px;
 }
