--- a/templates/posts/new_post_form.html
+++ b/templates/posts/new_post_form.html
@@ -5,22 +5,33 @@
     <h1>Add Post for {{user.full_name}}</h1>
     <form method="POST">
         <div class="form-group row">
-            <label for="title" class="col-sm-2">Title:</label>
+            <label for="title">Title:</label>
             <div class=class="col-sm-10">
                 <input type="text" name="title" class="form-control">
             </div>
         </div>
 
         <div class="form-group row">
-            <label for="content" class="col-sm-2">Content:</label>
+            <label for="content">Content:</label>
             <div class=class="col-sm-10">
                 <textarea name="content" class="form-control"></textarea>
             </div>
         </div>
+        <div class="form-group row">
+            <div><label>Tags:</label></div>
+            {% for tag in tags %} 
+            <div class="form-check-input">
+                <input class="form-check-input" type="checkbox" value="{{ tag.id }}" id="tag_{{ tag.id }}" name="tags">
+                <label class="form-check-label" for="defaultCheck1">
+                    {{tag.name}}
+                </label>
+            </div>
+            {% endfor %}
+        </div>
 
         <div class="form-group row">
-            <a href="/" class="btn col-sm-1">Cancel</a>
-            <button type="submit" class="col-sm-1">Add</button>
+            <a href="/" class="btn btn-warning col-sm-1">Cancel</a>
+            <button type="submit" class="btn btn-success col-sm-1">Add</button>
             <p class="col-sm-8"> </p>
         </div>
     </form>
