--- a/templates/posts/show_post.html
+++ b/templates/posts/show_post.html
@@ -10,9 +10,15 @@
         <div class="col-sm-10">
             <p>{{post.content}}</p>
             <p>Post by: <a href="/users/{{post.user.id}}">{{post.user.full_name}}</a></p>
-                <a href="/"> <button id="cancel">Cancel</button></a>
-                <a href="/posts/{{post.id}}/edit_post"> <button id="edit">Edit</button></a>
-                <a href="/posts/{{post.id}}/delete"> <button id="delete">Delete</button></a>
+            <p>
+                <strong>Tags:</strong>
+                {% for tag in post.tags %} 
+                <a href="/tags/{{tag.id}}"><span class="badge rounded-pill text-bg-info">{{tag.name}} </span></a>
+                {% endfor %} 
+            </p>
+            <a href="/"> <button id="cancel" class="btn btn-warning">Cancel</button></a>
+            <a href="/posts/{{post.id}}/edit_post"> <button id="edit" class="btn btn-info">Edit</button></a>
+            <a href="/posts/{{post.id}}/delete"> <button id="delete" class="btn btn-danger">Delete</button></a>
         </div>
     </div>
 </div>
