--- a/templates/users/all_users.html
+++ b/templates/users/all_users.html
@@ -9,7 +9,7 @@
         {% endfor %}
     </ul>
     <form action="/users/new">
-        <button>Add User</button>
+        <button class="btn btn-success">Add User</button>
     </form>
 </div>
 {% endblock %}
