--- a/templates/users/edit_user.html
+++ b/templates/users/edit_user.html
@@ -25,8 +25,8 @@
                 </div>
             </div>
             <div class="form-group row">
-                    <a href="/" class="btn col-sm-1">Cancel</a>
-                    <button type="submit" class="col-sm-1">Save</button>
+                    <a href="/" class="btn btn-warning col-sm-1">Cancel</a>
+                    <button type="submit" class="btn btn-info col-sm-1">Save</button>
                     <p class="col-sm-8"> </p>
             </div>
         </form>
