--- a/templates/users/new_user_form.html
+++ b/templates/users/new_user_form.html
@@ -1,30 +1,31 @@
 {% extends 'base.html' %}
 {% block title %}Add User {% endblock %}
 {% block content %}
+
 <div class="container">
     <h1>Add a New User</h1>
     <form method="POST">
         <div class="form-group row">
-            <label for="first_name" class="col-sm-2">First Name:</label>
+            <label for="first_name">First Name:</label>
             <div class=class="col-sm-10">
                 <input type="text" name="first_name" class="form-control">
             </div>
         </div>
         
         <div class="form-group row">
-            <label for="last_name" class="col-sm-2">Last Name:</label>
+            <label for="last_name">Last Name:</label>
             <div class=class="col-sm-10">
                 <input type="text" name="last_name" class="form-control">
             </div>
         </div>
         
         <div class="form-group row">
-            <label for="image_url" class="col-sm-2">Image URL:</label>
+            <label for="image_url">Image URL:</label>
             <div class=class="col-sm-10">
                 <input type="text" name="image_url" class="form-control">
             </div>
         </div>
-        <button>Submit User</button>
+        <button class="btn btn-success col-sm-1">Add User</button>
     </form>
 </div>
 {% endblock %}
