--- a/templates/users/user_details.html
+++ b/templates/users/user_details.html
@@ -11,8 +11,8 @@
         
         <div class="col-sm-10">
             <h1>{{user.full_name}}</h1>
-            <a href="/users/{{user.id}}/edit_user"> <button id="edit">Edit</button></a>
-            <a href="/users/{{user.id}}/delete"> <button id="delete">Delete</button></a>
+            <a href="/users/{{user.id}}/edit_user"> <button id="edit" class="btn btn-info">Edit</button></a>
+            <a href="/users/{{user.id}}/delete"> <button id="delete" class="btn btn-danger">Delete</button></a>
         </div>
         <div class="col-sm-10">
             <h2>Posts</h2>
@@ -22,7 +22,7 @@
                 {% endfor %}
             </ul>
             <form action="/users/{{user.id}}/new_post">
-                <button>Create New Post</button>
+                <button class="btn btn-success">Create New Post</button>
             </form>
         </div>
     </div>
